# Game-Bubble-and-Bubble

./: CMakeLists.txt  Image.qrc  LICENSE  README.md  bomb.cpp  bomb.h  core.cpp  core.h  floor.cpp  floor.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  health.cpp  health.h  hitable.cpp  hitable.h  instructionwindow.cpp  instructionwindow.h  instructionwindow.ui  light.cpp  light.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  numbomb.cpp  numbomb.h  pausebutton.cpp  pausebutton.h  player.cpp  player.h  wall.cpp  wall.h
framework/: component.cpp  component.h  gameobject.cpp  gameobject.h  gamescene.cpp  gamescene.h  imagetransform.cpp  imagetransform.h  transform.cpp  transform.h  transformbuilder.cpp  transformbuilder.h
